# statesman

./: README.md  pyproject.toml  setup.cfg  statesman.py  statesman_test.py  tasks.py
.github/workflows/: release.yml
