[tool.poetry]
name = "statesman"
version = "1.0.5"
description = "Maintained continuation of Blake Watters' async state machine library for modern Python."
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Rishirandhawa/statesman"
repository = "https://github.com/Rishirandhawa/statesman"
keywords = ["state machine", "finite state machine", "fsm", "asyncio", "workflow", "orchestration", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Object Brokering",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
devtools = "0.12.2"
pytest-mock = "3.15.1"
isort = "8.0.1"
invoke = "2.2.1"
flake8 = "7.3.0"
autoflake = "2.3.3"
mccabe = "0.7.0"
pycodestyle = "2.14.0"
pyflakes = "3.4.0"
pytest-cov = "7.1.0"
flake8-pytest-style = "2.2.0"
flake8-fixme = "1.1.1"
flake8-isort = "7.0.0"
flake8-docstrings = "1.7.0"
flake8-markdown = "0.6.0"
pre-commit = "4.5.1"
pydocstyle = "6.3.0"
flake8-commas = "4.0.0"
autopep8 = "2.3.2"
add-trailing-comma = "4.0.0"
pyformat = "1.0"
pylint = "4.0.5"
flake8-quotes = "3.4.0"

[build-system]
requires = ["poetry-core==2.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google" # "black"
line_length = 120
src_paths = ["statesman.py", "statesman_test.py"]
